--- a/dbConfig.json
+++ b/dbConfig.json
@@ -1,4 +1,4 @@
 {
-    "mongoUser" : MONGO_USER_NAME,
-    "mongoPass" : MONGO_USER_PASSOWRD
+    "mongoUser" : "MONGO_USER_NAME",
+    "mongoPass" : "MONGO_USER_PASSOWRD"
 }
